refactor to unit test everything